# MRM_MrinalDhami

./: LICENSE  Task_1.md  Task_3.md  Task_4_5.md  URDF_and_Gazebo.md  hello.cpp
GPS_task/: imu_to_gps1.cpp  simple_mover.cpp
GPS_task/test1/install/: local_setup.sh  setup.sh
GPS_task/test1/log/: latest_build
GPS_task/test1/src/mobile_robot/: CMakeLists.txt  package.xml
GPS_task/test2/: frames_2025-03-31_17.01.30.gv  frames_2025-04-02_16.59.23.gv
GPS_task/test2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
GPS_task/test2/log/: latest_build
GPS_task/test2/src/mobile_robot/: CMakeLists.txt
GPS_task/test2/src/mobile_robot/model/: robot.gazebo  wheels.xacro  zed2_camera.xacro
GPS_task/test2/src/mobile_robot/src/: imu_to_gps.cpp
Gazebo_task_part2/robot2/install/: local_setup.sh  setup.sh
Gazebo_task_part2/robot2/log/: latest_build
Gazebo_task_part2/robot2/src/robot2/: CMakeLists.txt
Gazebo_task_testfiles/log/: latest_build
Gazebo_task_testfiles/mobileTesting/: model.sdf
Gazebo_task_testfiles/test1/install/: local_setup.sh  setup.sh
Gazebo_task_testfiles/test1/log/: latest_build
Gazebo_task_testfiles/test2/: frames_2025-03-22_18.27.40.gv  start.urdf
Gazebo_task_testfiles/test3/gazebo_wkspc/install/: local_setup.sh  setup.sh
Gazebo_task_testfiles/test3/gazebo_wkspc/log/: latest_build
Gazebo_task_testfiles/test5/install/: local_setup.sh  setup.sh
Gazebo_task_testfiles/test5/log/: latest_build
Gazebo_task_testfiles/test5/robotgame/install/: local_setup.sh  setup.sh
Gazebo_task_testfiles/test6/install/: local_setup.sh  setup.sh
Gazebo_task_testfiles/test6/log/: latest_build
Github_task/: README.md
Personal Documentation/: ROS.md
chatroom/: README.md
chatroom/install/: local_setup.sh  setup.sh
chatroom/install/chatroom/share/chatroom/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chatroom/install/chatroom/share/chatroom/cmake/: chatroomConfig.cmake
chatroom/log/: latest_build
chatroom/src/chatroom/: CMakeLists.txt
(+76 files in other folders)
